changed img property to prevent clipping

--- a/ecoleMagie/assets/css/main.css
+++ b/ecoleMagie/assets/css/main.css
@@ -100,7 +100,7 @@ td, th {
 
 img {
     height: 80px;
-    object-fit: cover;
+    object-fit: contain;
     width: 80px;
 }
 
